--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Style+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&family=Style+Script&display=swap');
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -37,7 +38,8 @@ body {
 }    */
 
 .great-vibes{
-  font-family: "Style Script", cursive;
+  font-family: "Kalnia", serif;
+  font-optical-sizing: auto;
 }
 
 .spring-font {
